# aiogram_bot_webhook_template

./: .dockerignore  .env.example  Dockerfile  README.md  configreader.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
bot/: __main__.py  bot_settings.py
bot/db/: redis.py
bot/db/models/: models.py
bot/handlers/: __init__.py  start.py
bot/middleware/: __init__.py  db.py  dev_protect.py  i18n_dialog.py  throttling.py
bot/middleware/grafana/: active_user_middleware.py  common.py
bot/utils/: unitofwork.py
bot/utils/i18n_utils/: i18n_format.py
nginx/: http_nginx.conf  nginx.conf
scheduler/: main.py
