[project]
name = "aiogram-bot-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "aiogram-i18n>=1.4",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "litestar>=2.16.0",
    "prometheus-client>=0.21.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
]
